# aggregator

./: .gitignore  Procfile  alembic.ini  pyproject.toml  requirements.txt  run.py  run_parsers.py  runserver.py
backend/: app.py  config.py  forms.py  funcs.py  models.py  views.py
backend/templates/: index.html
bot/: app.py  config.py  funcs.py  handlers.py
db/: models.py  schema.py
db/alembic/: env.py
db/alembic/versions/: 0deef8f26f98_refactor.py  2fc2c5c56daf_002.py  37504bc0a072_add_url_in_order.py  692af3ead7d8_003.py  8fb90e01eeef_add_order.py  b11ced50d29d_initial.py  c60f97119515_001.py  cf33da5334e5_init.py  eb6e1e7348ba_003.py
migrations/versions/: 0b853773e60d_users.py  12538a64d626_platform.py  19e89bad6bb8_filters_table.py  1fb476ed055d_slug_filter.py  37c73c6a3a2c_unique_constraint_in_filters.py  5baadc386b40_users_table.py  684b76398bcd_silent_mode.py  c94d0140711b_platform2.py  f60f22c87473_add_adding_filters.py
parser/: app.py  app2.py  app3.py  category_refresh.py  funcs.py  parser.py  parsers.py
telegram_bot/: app.py  app2.py  config.py  funcs.py  logger.py  models.py  run.py  schema.py
templates/: error_404.html  index.html
